Add Splash screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Olympic Athletes</string>
+    <string name="athletes_top_bar_title">Olympic Athletes</string>
 </resources>
