--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Olympic Athletes</string>
     <string name="athletes_top_bar_title">Olympic Athletes</string>
+    <string name="athletes_screen_empty">No games found.</string>
+    <string name="athletes_screen_error">Error retrieving data, try again later.</string>
 </resources>
