--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="weight_label">Weight:</string>
     <string name="dob_label">DOB:</string>
     <string name="name_label">Name:</string>
+    <string name="medals_label">Medals</string>
 </resources>
